--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.8;
     margin: 0;
     padding: 0;
-    background-color: #464545;
+    background-color: #f9f9f9;
     color: #333;
 }
 header {
