--- a/styles.css
+++ b/styles.css
@@ -45,8 +45,8 @@ footer {
     margin-top: 2rem;
 }
 .image {
-    max-width: 100%;
-    height: auto;
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
     border-radius: 5px;
     margin: 1rem 0;
-}
