--- a/styles.css
+++ b/styles.css
@@ -44,10 +44,16 @@ footer {
     color: white;
     margin-top: 2rem;
 }
-.image {
+.c-image {
     width: 300px;
     height: 200px;
     object-fit: cover;
+    border-radius: 5px;
+    margin: 1rem 0;
+}
+.a-image {
+    max-width: 100%;
+    height: auto;
     border-radius: 5px;
     margin: 1rem 0;
 }
