--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ nav a {
     text-decoration: none;
     padding: 1rem;
     display: block;
+    font-size: 0.8rem;
 }
 nav a:hover {
     background-color: #575757;
